# growth_SM2018

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindARPACK.cmake  FindLIBIGL.cmake  FindTBB.cmake  install_target.cmake  safeguards.cmake
printpaths/: convert_svg_to_cpp_input.py
scripts/: run_all_4dprinting_testcases.sh  run_monolayer_orthogrowth.sh  run_validation_sphericalcap.sh
src/libshell/: ArgumentParser.hpp  BendingOperator_Parametric.cpp  BendingOperator_Parametric.hpp  BoundaryConditionsData.hpp  CombinedOperator_Parametric.cpp  CombinedOperator_Parametric.hpp  ComputeCurvatures.cpp  ComputeCurvatures.hpp  ComputeHausdorffDistance.cpp  ComputeHausdorffDistance.hpp  ConfigurationData.hpp  CreateExtendedTriangleInfos.hpp  DCSConfigurations.hpp  DCSCurrentConfigurationData.hpp  EllipticalCircumference.hpp  EnergyHelper_Parametric.hpp  EnergyHelper_Parametric_Ortho.hpp  EnergyOperator.hpp  EnergyOperatorList.hpp  ExtendedTriangleInfo.hpp  Geometry.hpp  Geometry_Orchid.hpp  GrowthHelper.hpp  HLBFGS_Wrapper.hpp  HLBFGS_Wrapper_Parametrized.hpp  LBFGS_Wrapper.hpp  MaterialProperties.hpp  MergePerFaceQuantities.hpp  Mesh.hpp  ParametricSurfaceLibrary.hpp  Parametrizer.hpp  Profiler.hpp  QuadraticForms.hpp  ReadVTK.hpp  SVGHelper.hpp  StretchingOperator_Parametric.cpp  StretchingOperator_Parametric.hpp  Timer.hpp  TopologyData.hpp  TriangleInfo.hpp  (+7 more)
src/simulations/: Sim.hpp  Sim_Bilayer_4DFilaments.cpp  Sim_Bilayer_4DFilaments.hpp  Sim_IOops.cpp  Sim_IOops.hpp  Sim_MonoLayer_Growth.cpp  Sim_MonoLayer_Growth.hpp  WriteINP.hpp  main.cpp
test/testshell/: ComputeBasicGradients.hpp  Derivative_FD.hpp  Test_BasicGradients.cpp  Test_BendingOperator_Convergence.cpp  Test_EnergyOperatorDCS_Gradient.cpp  Test_Helpers_Convergence.hpp  Test_StretchingOperator_Convergence.cpp  Test_WriteReadMesh.cpp  test_energy_staticeq.cpp
test/testshell/bak/: Test_WriteBilayerSTL.cpp  Test_WriteBilayerSTL.hpp
